feature: Delete product
